--- a/app/src/main/res/layout/dia_oss.xml
+++ b/app/src/main/res/layout/dia_oss.xml
@@ -22,6 +22,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:importantForAccessibility="no"
                 android:text="@string/licenses_emoji_project_dev" />
 
             <TextView
@@ -49,6 +50,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:importantForAccessibility="no"
                 android:text="@string/licenses_emoji_project_url" />
 
             <TextView
@@ -77,6 +79,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:importantForAccessibility="no"
                 android:text="@string/licenses_emoji_project_code" />
 
             <TextView
@@ -105,6 +108,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:importantForAccessibility="no"
                 android:text="@string/licenses_emoji_license_short" />
 
             <TextView
