print: optional headlines

--- a/app/src/main/res/layout/dia_print.xml
+++ b/app/src/main/res/layout/dia_print.xml
@@ -15,9 +15,31 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
+                android:id="@+id/dia_print_include_headlines_layout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="10dp">
+
+                <CheckBox
+                    android:id="@+id/dia_print_include_headlines"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:checked="true"
+                    android:paddingStart="5dp"
+                    android:paddingEnd="5dp"
+                    android:text="@string/print_include_headlines"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:id="@+id/dia_print_include_progress_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_below="@id/dia_print_include_headlines_layout"
                 android:layout_gravity="center_horizontal"
                 android:gravity="center"
                 android:orientation="horizontal"
