--- a/app/src/main/res/layout/activity_new_card.xml
+++ b/app/src/main/res/layout/activity_new_card.xml
@@ -18,6 +18,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
+                android:importantForAccessibility="no"
                 android:text="@string/card_front"
                 android:textColor="@color/light_black" />
 
@@ -37,6 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
+                android:importantForAccessibility="no"
                 android:text="@string/card_back"
                 android:textColor="@color/light_black" />
 
@@ -56,6 +58,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
                 android:gravity="center"
+                android:importantForAccessibility="no"
                 android:text="@string/card_notes"
                 android:textColor="@color/light_black" />
 
