SortCards: Last repetition

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -52,6 +52,14 @@
                     android:text="@string/sort_alphabetical"
                     android:textColor="@color/light_black"
                     android:textSize="16sp" />
+
+                <RadioButton
+                    android:id="@+id/settings_sort_repetition"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/sort_repetition"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
             </RadioGroup>
 
             <View
