--- a/app/src/main/res/layout/activity_advanced_search.xml
+++ b/app/src/main/res/layout/activity_advanced_search.xml
@@ -59,6 +59,59 @@
                 android:background="@color/button"
                 android:importantForAccessibility="no" />
 
+
+            <LinearLayout
+                android:id="@+id/advanced_search_container_tags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="@string/tags"
+                    android:textColor="@color/default_text"
+                    android:textSize="20sp" />
+
+                <RadioGroup
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <RadioButton
+                        android:id="@+id/advanced_search_tags_all"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/advanced_search_tags_all"
+                        android:textColor="@color/light_black"
+                        android:textSize="16sp" />
+
+                    <RadioButton
+                        android:id="@+id/advanced_search_tags_select"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="@string/advanced_search_tags_select"
+                        android:textColor="@color/light_black"
+                        android:textSize="16sp" />
+                </RadioGroup>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rec_advanced_search_tags"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="20dp" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_margin="30dp"
+                    android:background="@color/button"
+                    android:importantForAccessibility="no" />
+            </LinearLayout>
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
