--- a/app/src/main/res/layout/activity_view_card.xml
+++ b/app/src/main/res/layout/activity_view_card.xml
@@ -103,6 +103,22 @@
                 </LinearLayout>
             </LinearLayout>
 
+            <HorizontalScrollView
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/card_tags"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_marginBottom="40dp"
+                    android:gravity="center"
+                    android:textColor="@color/light_black"
+                    android:textIsSelectable="true"
+                    android:textSize="@dimen/card_notes_size_default" />
+            </HorizontalScrollView>
+
             <Button
                 android:id="@+id/view_card_images"
                 style="@style/material_button"
