--- a/app/src/main/res/xml/licenses.xml
+++ b/app/src/main/res/xml/licenses.xml
@@ -49,7 +49,7 @@
         <projectCode>https://github.com/saket/Better-Link-Movement-Method</projectCode>
     </item>
     <item>
-        <identifier>WTFPL</identifier>
+        <identifier>WTFPL-colorseekbar</identifier>
         <projectDev>Leon Fu</projectDev>
         <projectName>ColorSeekBar (com.github.rtugeek:colorseekbar)</projectName>
         <projectCode>https://github.com/rtugeek/ColorSeekBar</projectCode>
