--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -24,7 +24,7 @@
     </style>
 
     <style name="Theme.RBV.ActionBar" parent="@style/ThemeOverlay.Material3.ActionBar">
-        <item name="colorSurface">@color/statusbar_back</item>
+        <item name="colorSurfaceContainer">@color/statusbar_back</item>
         <item name="elevationOverlayColor">@color/statusbar_back</item>
         <item name="colorOnSurface">@android:color/white</item>
         <item name="android:editTextColor">@color/light_grey_statusbar</item>
