--- a/app/src/main/res/layout/activity_view_collection_or_pack.xml
+++ b/app/src/main/res/layout/activity_view_collection_or_pack.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="10dp">
 
     <ScrollView
         android:layout_width="match_parent"
