--- a/app/src/main/res/menu/menu_view_card.xml
+++ b/app/src/main/res/menu/menu_view_card.xml
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orderInCategory="400"
-        android:title="@string/tags"
+        android:title="@string/edit_card_tag"
         app:showAsAction="never" />
     <item
         android:id="@+id/menu_view_card_print"
