--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -73,6 +73,52 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:text="@string/settings_flashcard_list_side"
+                android:textColor="@color/default_text"
+                android:textSize="20sp" />
+
+            <RadioGroup
+                android:id="@+id/settings_flashcard_list_side"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
+                <RadioButton
+                    android:id="@+id/settings_flashcard_list_side_front"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/card_front"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
+
+                <RadioButton
+                    android:id="@+id/settings_flashcard_list_side_back"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/card_back"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
+
+                <RadioButton
+                    android:id="@+id/settings_flashcard_list_side_both"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/show_card_side_both"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
+            </RadioGroup>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="30dp"
+                android:background="@color/button"
+                android:importantForAccessibility="no" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:paddingTop="10dp"
                 android:text="@string/settings_format"
                 android:textColor="@color/default_text"
@@ -114,6 +160,36 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/settings_format_card_notes"
+                    android:textColor="@color/light_black"
+                    android:textSize="16sp" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_margin="30dp"
+                android:background="@color/button"
+                android:importantForAccessibility="no" />
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="10dp"
+                android:text="@string/settings_query_mode"
+                android:textColor="@color/default_text"
+                android:textSize="20sp" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:orientation="vertical">
+
+                <CheckBox
+                    android:id="@+id/settings_query_mode_reset_progress"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/settings_query_mode_reset_progress"
                     android:textColor="@color/light_black"
                     android:textSize="16sp" />
             </LinearLayout>
